# chronicle

./: .gitignore  .gitmodules  CMakeLists.txt  ChronicleCLI  README.md  create-so.sh  example-chronicle.ini  requirements.md  start
.github/ISSUE_TEMPLATE/: -chronicle_base--general.md  -chronicle_core--general.md  -chronicle_web_ui--general.md
.github/workflows/: c-cpp.yml  update-submodules.yml
chronicle_base/: API.py  colorful_formatter.py  config.py  dependencies.py  gunicorn_log_config.ini  log.py  main.py  responses.py  test.py  utils.py  uvicorn_log_config.py  uvicorn_log_config.yaml
chronicle_base/calls/: __init__.py  deleteDevice.py  getDevice.py  getDeviceConfig.py  getDeviceSettings.py  getSettings.py  listDevices.py  manageDevice.py  updateSettings.py
chronicle_base/config/: settings.py
chronicle_base/core/: chronicle.py  response.py
chronicle_base/gunicorn/: gunicorn_log_config.ini  uvicorn_log_config.py
chronicle_base/routers/: devices.py  settings.py  users.py
chronicle_base/utils/: paramHandler.py
chronicle_core/: CMakeLists.txt  README.md  TODO.md  compile_commands.json  create-so.sh
chronicle_core/.cache/clangd/index/: CATALYST_8000V.cpp.60D31781AD6EA7A7.idx  CATALYST_8000V.cpp.654BF15DB5EEEA02.idx  INIReader.cpp.2651795BA9928043.idx  INIReader.cpp.D8E5762BB9AFD9DE.idx  INIReader.h.6FC11E3F5F6B928C.idx  INIReader.h.B88D9C6FEF861064.idx  LINUX_TEST.cpp.6BF92D75A4D67880.idx  LINUX_TEST.cpp.9A13D3DD05A9AEF2.idx  VSRX.cpp.072B75CBF02B040C.idx  VSRX.cpp.498BBC94CEC253BF.idx  chronicle.cpp.2621B06F7163BA23.idx  chronicle.cpp.50DF711C64A37F3A.idx  chronicle.cpp.5C5EA5D0642268A8.idx  chronicle.cpp.A1FB6A7D9E430B77.idx  chronicle.hpp.901D7DC8F3E85B82.idx  chronicle.hpp.E16D78CDA7B729E6.idx  config.cpp.65802FB7BBF8CC17.idx  config.cpp.BC671391812B6D52.idx  config.hpp.1EB046A45C7B3043.idx  config.hpp.75DFD26B90EC8EFE.idx  database_handler.cpp.D7F80F403765A4D5.idx  database_handler.hpp.C88A5D37B1507E25.idx  device_factory.cpp.54685C49DDB95E25.idx  device_factory.cpp.C02BE88F4E299792.idx  device_factory.hpp.C8D4E5B50C8D995F.idx  device_factory.hpp.FED33651F9A102F1.idx  devices.cpp.0BF9168FD9C027AA.idx  devices.cpp.8D64A618A4A11241.idx  error_handler.cpp.14797A733058FD81.idx  error_handler.cpp.3B35C3C8D2E869EA.idx  error_handler.hpp.B1E761C4411D9A74.idx  error_handler.hpp.B38C0E35AE6D19E8.idx  ini.c.362C9945B4892874.idx  ini.c.38989BB0B9F48D48.idx  ini.h.5E63C90344EC8397.idx  ini.h.E4D3AF5C6D16AFFE.idx  mongodb.cpp.CEB7E8C5484B4A56.idx  mongodb.hpp.AAE8D0322FDF0CEF.idx  ssh.cpp.61B1E452553B6832.idx  ssh.cpp.CDAE8625B6FC2995.idx  (+2 more)
chronicle_core/include/: database_handler.hpp
chronicle_core/include/core/: chronicle.hpp  config.hpp  device_factory.hpp  error_handler.hpp  mongodb.hpp  ssh.hpp
chronicle_core/src/: database_handler.cpp
chronicle_core/src/bindings/: chronicle.cpp
chronicle_core/src/core/: chronicle.cpp  config.cpp  error_handler.cpp  mongodb.cpp  ssh.cpp
chronicle_core/src/deviceMaps/Cisco/: CATALYST_8000V.cpp  LINUX_TEST.cpp
chronicle_core/src/deviceMaps/Juniper/: VSRX.cpp
chronicle_web_ui/: main.py  package.json
chronicle_web_ui/api/: __init__.py  getDeviceConfig.py  getDeviceSettings.py  getSettings.py  initChronicleConfig.py  listDevices.py
chronicle_web_ui/config/: settings.py
chronicle_web_ui/pages/: index.tsx
chronicle_web_ui/pages/device/: [name].tsx
device-maps/: 4.json
include/core/: chronicle.hpp  config.hpp  device_factory.hpp  error_handler.hpp  ssh.hpp
src/bindings/: chronicle.cpp  devices.cpp
src/core/: chronicle.cpp  config.cpp  device_factory.cpp  error_handler.cpp  ssh.cpp
src/deviceMaps/Cisco/: CATALYST_8000V.cpp
tests/: chronicle.py  main.cpp  maketest.sh
tests/devices/Cisco/: CATALYST_8000V.cld
